alterei o banco de dados

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -54,7 +54,10 @@
         window.location.href = "login.html"
     }
 
-
+    function aguardar() {
+    var divAguardar = document.getElementById("div_aguardar");
+     divAguardar.style.display = "flex";
+}
     function cadastrar() {
         aguardar();
 
