--- a/site/public/login.html
+++ b/site/public/login.html
@@ -100,7 +100,7 @@
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
-                 
+                    sessionStorage.ID_DIARIO = json.diario;                 
 
                     setTimeout(function () {
                         window.location = "diario.html";
