versão final da documentação e adicionei validação de undefined no final Quiz para o total de pontos e acertos

--- a/site/public/dashboard.html
+++ b/site/public/dashboard.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="TituloQuiz">
-                    <span class="seuPerfil"> Seu perfil este mês é...</span> <br>
+                    <span class="seuPerfil"> Seu perfil é...</span> <br>
                     <span class="nomePerfil" id="campoPerfil"> </span>
                     <span class="nomePerfil" id="nomePerfil"> </span> <br>
                 </div>
